# simplewal

./: BUILD.bazel  MODULE.bazel  go.mod
cmd/simplewal/: BUILD.bazel  main.go
internal/wal/: BUILD.bazel  wal.go  wal_test.go
proto/: BUILD.bazel  wal.proto
